css/contact.css
.contact{
    height: 90vh;
    display: flex;
    align-items: center;

}
.main-contact{
    max-width: 1200px;
    margin: 20px auto;
    display: flex;
    flex-direction: column;
    
    text-align: center;
}

.contact-title{
    padding:10% 0%;
    display: flex;
    justify-content: center;
    color: #00296b;
    font-weight: 600;
    letter-spacing: 1.5px;
    text-transform: uppercase;
    width: 100%;
    margin: 5% 0;
    
}


.contact-cards{
    display: flex;
    justify-content: center;
    text-align: center;
}
.contact-card{
    color: #00296b;
    margin: 0px 5px;
    box-shadow: 0 5px 25px rgba(1 1 1 /15%);
    
}
.contact-card .icon{
    font-size: 50px;
}

.footer{
    background-color: #00296b;
    
    
}
.main-footer{
    max-width: 1200px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 20px;
}

.footer-title{
    display: flex;
    color: #fdc500;
}
.footer-social-icons a{
    color: #fdc500;
    padding: 5px;
    font-size: 20px;
}
.info p{
    font-size: 18px;
  }
 




@media (max-width:992px){
    .contact-title{
        margin:0% 0%;
    }
}
@media (max-width:768px){
    .contact-title{
        margin:15% 0%;
    }
}

@media (max-width:570px){
    .contact-title{
        margin:20% 0% 10% 0%;
    }
    .contact-cards{
       margin: auto;
       display: flex;
       flex-direction: column;
       justify-content: center;
       text-align: center;
    }
    .contact-card{
        width: 100%;
        margin:15px auto;
    }
    .contact{
        height: 100%;  
    }
    .footer-social-icons a{
        font-size: 15px;
    }
}
@media (max-width:320px){
    .contact{
        height: 100%;  
    }
    .contact-title{
        margin:120px 0 50px 0;

    }
    .footer-title{
        font-size: 12px;

    }
}

